# api

./: .gitignore  Makefile.am  README.md  api.sln  autogen.sh  configure.ac  libapi.pc.in
base/: Makefile.am  atomic.c  base64.c  bitset.c  buffer.c  cache.c  core.c  crc64.c  daemon.c  errorcodes.c  file.c  hashmur.c  hashtable.c  log.c  memory.c  queue.c  shmtx.c  slab.c  snprintf.c  socket.c  strings.c  time.c  timestr.c  trie.c  vector.c
c/: CMakeLists.txt  Makefile.in  api-config.in  buildconf  config.layout  configure.in  libapi.dsp
c/api/: Makefile.in  api-config.in  api.pc.in  build.conf  configure.in
c/api/atomic/unix/: README.md
c/api/include/: api.h.in  api_atomic.h  api_errno.h  api_lib.h  api_strings.h  api_version.h  api_want.h  atomic.h
c/api/misc/unix/: errorcodes.c
c/api/strings/: strings.c
c/api/test/: Makefile.in  abts.h  spinlock.h  test_atomic.c  test_spinlock.c  testutil.h
c/api/test/internal/: testucs.c
c/api/tools/: gen_test_char.c
compat/: Makefile.am  consistent_hash.c  dbcp.c  memwatch.c  rbtree.c  shmem.c
compat/hiredis/: Makefile.am  hiredis.c  hiredis_async.c  hiredis_dict.c  hiredis_dict.h  hiredis_fmacros.h  hiredis_locker.h  hiredis_net.c  hiredis_net.h  hiredis_sds.c  hiredis_sds.h  lua_scripts.h
dbm/: dbcp.c
dbm/hiredis/: hiredis.h  hiredis_async.h  hiredis_locker.c  hiredis_net.c  mkscripts.py
dbm/hiredis/scripts/: lock.lua  unlock.lua
event/: Makefile.am  asio.c  ecb.h  ev.c  ev.h  ev_epoll.c  ev_poll.c  ev_port.c  ev_select.c  event_private.c
include/: api.h  include.am
include/api/: asio.h  atomic.h  base64.h  bitset.h  buffer.h  cache.h  conhash.h  core.h  crc64.h  daemon.h  darwin_config.h  dbcp.h  errno.h  file.h  freebsd_config.h  hashtable.h  lib.h  linux_config.h  log.h  memory.h  memwatch.h  platform.h.in  posix_config.h  queue.h  rbtree.h  shmem.h  shmtx.h  slab.h  socket.h  solaris_config.h  strings.h  time.h  tree.h  trie.h  vector.h  version.h  want.h
java/: ChangeLog
java/android/: .classpath  .project
java/android/src/org/mymmsc/android/app/: AResource.java  AppContext.java  IActivity.java  IProgressCallback.java  IResource.java  IViewClick.java  ItemListener.java  ListViewAdapter.java  Progress.java
java/android/src/org/mymmsc/android/net/: AsyncImageLoader.java  AsyncImageLoader3.java  AsyncImageLoaderTask.java  AutoUpdate.java  Download.java  ViewHolder.java
java/api/: .classpath  .project  build.properties  build.xml
java/api/src/org/mymmsc/api/: Environment.java  VersionInfo.java
java/api/src/org/mymmsc/api/algorithms/: HashTable.java  InterfaceHashTable.java
java/api/src/org/mymmsc/api/assembly/: Api.java  BeanAlias.java  ExceptionEx.java  RegExp.java  TypeResolver.java  XmlParser.java
java/api/src/org/mymmsc/api/category/: Encoding.java  PseudoBase64.java
java/api/src/org/mymmsc/api/context/: ClassTraverser.java  JsonAdapter.java
java/api/src/org/mymmsc/api/encoding/: Charsets.java  InterfaceEncoder.java  JChardetFacade.java  Makefile  Test.java  UTF8.java  UnknownCharset.java  UnsupportedCharset.java  org_mymmsc_api_encoding_Charsets.c  org_mymmsc_api_encoding_Charsets.h
java/api/src/org/mymmsc/api/io/: ActionStatus.java  DataStream.java  DirIterator.java  FileApi.java  HttpClient.java  HttpCookie.java  HttpResult.java  IoHandler.java  MimeType.java  http-chunked.txt  proto_http.txt
java/gsm/: .classpath  .project
java/gsm/src/org/mymmsc/w3c/dso/: AbstractLibrary.java  DsoLibrary.java
java/gsm/src/org/mymmsc/w3c/gsm/: AbstractBox.java  CommEvent.java  Communicator.java  Constants.java  InBox.java  InterfaceBox.java  OutBox.java
java/j2ee/: .classpath  .project
java/j2ee/src/org/mymmsc/j2ee/: Adapter.java
java/j2ee/src/org/mymmsc/j2ee/http/: Category.java  HttpCookie.java  HttpElement.java  HttpFile.java  HttpParameter.java  HttpSyncMethod.java  HttpSyncObject.java  HttpToken.java  LogTailer.java  RedisApi.java  TestHttpSyncObject.java  TestProxy.java  Token.java  UrlApi.java
java/j2ee/src/org/mymmsc/j2ee/struts/: APS.java  ActionAdapter.java  ActionFilter.java  ActionResult.java  ActionScheduler.java  HttpAction.java  IAction.java  PackageUtil.java  WebAction.java  log4j.tpl
java/test/: .classpath  .project
java/test/src/org/mymmsc/api/asm/: AccessClassLoader.java  ConstructorAccess.java  FieldAccess.java  MethodAccess.java
java/test/src/org/mymmsc/api/examples/: ContextBinding.java  Tail.java  TestEncoding.java  XmlModify.java
java/test/src/org/mymmsc/api/test/: TestEncoding.java  TestPrintOrder.java  TestSSL.java
java/utils/: .classpath  .project
java/utils/src/org/apache/commons/logging/: LogConfigurationException.java  LogFactory.java
java/utils/src/org/mymmsc/api/adapter/: AbstractFile.java  ApiException.java  AutoObject.java  IAdapter.java  IUnknown.java
java/utils/src/org/mymmsc/api/aio/: DEFINES.java  UdpIocp.java
java/utils/src/org/mymmsc/api/assembly/: ImageUtils.java
java/utils/src/org/mymmsc/api/concurrent/: InterfaceThread.java  TaskThread.java  ThreadPool.java
java/utils/src/org/mymmsc/api/context/: ApiContext.java  ApiInitialContextFactoryBuilder.java  BlockDynTabRec.java  BlockInstTabRec.java  BlockNotDefinedException.java  BlockTabRec.java  TemplateIterator.java  TemplateSpecification.java  TemplateSyntaxException.java  Templator.java  TemplatorCache.java  TemplatorParser.java  VarRefTabRec.java  VariableNotDefinedException.java
java/utils/src/org/mymmsc/api/crypto/: AbstractCrypto.java  Base64.java  (+2 more)
libapi/: ReadMe.txt  libapi.vcxproj
p2sp/: ReadMe.txt  SocketLayer.cpp  p2sp.vcxproj  p2sp.vcxproj.filters
samples/: Makefile  Makefile.am
samples/conhash/: Makefile.am  test-conhash.c  test-hiredis.c
samples/google/: Makefile.am  rtb-google.c
samples/socks5/: Makefile.am  libconfig.c  libconfig.h  liblog.c  liblog.h  libthread.c  libthread.h  socks5.c  socks5.h
test/: Makefile.am  abts.c  abts.h  abts_tests.h  ad-Makefile  test-ad.c  test-hashtable.c  test-mtree.c  test_atomic.c  test_spinlock.c  testutil.c  testutil.h
test-p2sp/: ReadMe.txt  main.cpp  test-p2sp.vcxproj  test-p2sp.vcxproj.filters
(+226 files in other folders)
