noinst_LTLIBRARIES = libbase.la

libbase_la_SOURCES = base64.c bitset.c buffer.c core.c crc64.c atomic.c \
					 errorcodes.c strings.c \
					 hashtable.c hashmur.c \
					 socket.c time.c timestr.c \
					 memory.c shmtx.c slab.c log.c \
					 file.c cache.c vector.c trie.c queue.c

libbase_la_CFLAGS  = -I$(top_srcdir)/include

