noinst_LTLIBRARIES = libbase.la

libbase_la_SOURCES = core.c atomic.c buffer.c daemon.c \
					 errorcodes.c \
					 file.c cache.c log.c \
					 socket.c \
					 strings.c snprintf.c \
					 time.c timestr.c \
					 hashtable.c hashmur.c \
					 memory.c shmtx.c slab.c \
					 base64.c bitset.c crc64.c \
					 vector.c trie.c queue.c 

libbase_la_CFLAGS  = -I$(top_srcdir)/include

